PR 49595 William Ahern: The exit status of "unset NOTSET" should be 0, not 1. (like 48312 but for ksh)